--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catchup",
+  "name": "captch-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.35.0",
+    "prettier": "^2.8.4",
     "vite": "^4.1.0"
   },
   "dependencies": {
